--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "dotenv": "^2.0.0",
+    "nodemailer": "^2.6.4",
     "request": "^2.75.0"
   }
 }
