--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^0.22.0",
     "dotenv": "^2.0.0",
     "nodemailer": "^2.6.4",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "cron": "^1.1.0"
   }
 }
